employee_roles: list, list delete, store, update, delete, remove, restore, getId, getSlug
