# storage/api-docs/api-docs.yaml
@@ -9,6 +9,262 @@ info:
     url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
   version: 1.0.0
 paths:
+  /api/employee-role:
+    get:
+      tags:
+        - EmployeeRole
+      summary: 'List Employee Role'
+      parameters:
+        -
+          name: q
+          in: query
+          description: 'Search query'
+          schema:
+            type: string
+        -
+          name: page
+          in: query
+          description: Page
+          schema:
+            type: number
+          example: '1'
+        -
+          name: per_page
+          in: query
+          description: 'Items per page'
+          schema:
+            type: number
+          example: '10'
+        -
+          name: sort_by
+          in: query
+          description: 'Sort items by'
+          schema:
+            type: string
+          example: updated_at
+        -
+          name: sort_type
+          in: query
+          description: 'Sort items type [''asc'', ''desc'']'
+          schema:
+            type: string
+          example: desc
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: 'Not Found'
+    post:
+      tags:
+        - EmployeeRole
+      summary: 'Store new Employee Role'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              required:
+                - name
+                - slug
+              properties:
+                name:
+                  type: string
+                slug:
+                  type: string
+              type: string
+            example:
+              name: 'Nhân Viên'
+              slug: nhan-vien
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: 'Not Found'
+  /api/employee-role/deleted:
+    get:
+      tags:
+        - EmployeeRole
+      summary: 'List Employee Role Deleted'
+      parameters:
+        -
+          name: q
+          in: query
+          description: 'Search query'
+          schema:
+            type: string
+        -
+          name: page
+          in: query
+          description: Page
+          schema:
+            type: number
+          example: '1'
+        -
+          name: per_page
+          in: query
+          description: 'Items per page'
+          schema:
+            type: number
+          example: '10'
+        -
+          name: sort_by
+          in: query
+          description: 'Sort items by'
+          schema:
+            type: string
+          example: updated_at
+        -
+          name: sort_type
+          in: query
+          description: 'Sort items type [''asc'', ''desc'']'
+          schema:
+            type: string
+          example: desc
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: 'Not Found'
+  '/api/employee-role/{id}':
+    get:
+      tags:
+        - EmployeeRole
+      summary: 'Get Employee Role by id'
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'Item id'
+          required: true
+          schema:
+            type: number
+          example: '21'
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: 'Not Found'
+    put:
+      tags:
+        - EmployeeRole
+      summary: 'Update a Employee Role'
+      parameters:
+        -
+          name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              required:
+                - name
+                - slug
+              properties:
+                name:
+                  type: string
+                slug:
+                  type: string
+              type: string
+            example:
+              name: 'Nhân Viên'
+              slug: nhan-vien
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: 'Not Found'
+  '/api/employee-role/{slug}':
+    get:
+      tags:
+        - EmployeeRole
+      summary: 'Get Employee Role by slug'
+      parameters:
+        -
+          name: slug
+          in: path
+          description: 'Employee Role slug'
+          required: true
+          schema:
+            type: string
+          example: employee-role
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: 'Not Found'
+  '/api/employee-role/{id}/delete':
+    delete:
+      tags:
+        - EmployeeRole
+      summary: 'Delete a room status'
+      parameters:
+        -
+          name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: 'Not Found'
+  '/api/employee-role/{id}/remove':
+    delete:
+      tags:
+        - EmployeeRole
+      summary: 'Remove Employee Role from trash'
+      parameters:
+        -
+          name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: 'Not Found'
+  '/api/employee-role/{id}/restore':
+    patch:
+      tags:
+        - EmployeeRole
+      summary: 'Restore Employee Role from trash'
+      parameters:
+        -
+          name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+        401:
+          description: Unauthorized
+        404:
+          description: 'Not Found'
   /api/items:
     get:
       tags:
